# cdkSpider42

./: .gitignore  cdk.json  cdk_spider42.go  cdk_spider42_test.go  go.mod  go.sum
lambda/: Cargo.toml  CargoLambda.toml
lambda-handler/: main..go
lambda/src/: lib.rs
lambdaFetch/: main.go
lambdaFetchStores/: main.go
lambdaFetchUpdates/: main.go
